<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nav_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="#FDF9F9"
        android:textColorHighlight="#EA8B8B"
        android:textColorLink="#D56E6E"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:contentDescription="@string/nav_user_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />
<!--    android:text="@string/nav_header_title"-->
    <TextView
        android:id="@+id/usermail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textSize="20sp" />
<!--    android:text="@string/nav_header_subtitle"-->
</LinearLayout>